--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Daily</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <h1>Quiz daily</h1>
+        <a href="/game.html" class="btn">Play</a>
+        <a href="/highscores.html" class="btn">High Scores</a>
+      </div>
+    </header>
+  </body>
 </html>
