--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container">
+    <header class="header container">
+      <div class="flex-center flex-column">
         <h1>Quiz daily</h1>
         <a href="/game.html" class="btn">Play</a>
         <a href="/highscores.html" class="btn">High Scores</a>
