game page markup added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header container">
       <div class="flex-center flex-column">
         <h1>Quiz daily</h1>
-        <a href="/game.html" class="btn" disabled>Play</a>
+        <a href="/game.html" class="btn">Play</a>
         <a href="/highscores.html" class="btn">High Scores</a>
       </div>
     </header>
