--- a/game.html
+++ b/game.html
@@ -8,8 +8,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>Play Games</h1>
+    <header class="container">
+      <div class="game flex-column justify-center">
+        <h2 class="question">What is the answer to this question?</h2>
+        <div class="choice-container">
+          <p class="choice-prefix">A</p>
+          <p class="choice-text">Choics 1</p>
+        </div>
+        <div class="choice-container">
+          <p class="choice-prefix">B</p>
+          <p class="choice-text">Choics 2</p>
+        </div>
+        <div class="choice-container">
+          <p class="choice-prefix">C</p>
+          <p class="choice-text">Choics 3</p>
+        </div>
+        <div class="choice-container">
+          <p class="choice-prefix">D</p>
+          <p class="choice-text">Choics 4</p>
+        </div>
+      </div>
     </header>
   </body>
 </html>
