correct incorrect ans animation added

--- a/game.html
+++ b/game.html
@@ -11,21 +11,21 @@
     <header class="container">
       <div class="game flex-column justify-center">
         <h2 class="question">What is the answer to this question?</h2>
-        <div class="choice-container" data-choice="1">
+        <div class="choice-container">
           <p class="choice-prefix">A</p>
-          <p class="choice-text">Choics 1</p>
+          <p class="choice-text" data-choice="1">Choics 1</p>
         </div>
-        <div class="choice-container" data-choice="2">
+        <div class="choice-container">
           <p class="choice-prefix">B</p>
-          <p class="choice-text">Choics 2</p>
+          <p class="choice-text" data-choice="2">Choics 2</p>
         </div>
-        <div class="choice-container" data-choice="3">
+        <div class="choice-container">
           <p class="choice-prefix">C</p>
-          <p class="choice-text">Choics 3</p>
+          <p class="choice-text" data-choice="3">Choics 3</p>
         </div>
-        <div class="choice-container" data-choice="4">
+        <div class="choice-container">
           <p class="choice-prefix">D</p>
-          <p class="choice-text">Choics 4</p>
+          <p class="choice-text" data-choice="4">Choics 4</p>
         </div>
       </div>
     </header>
