--- a/game.html
+++ b/game.html
@@ -10,6 +10,16 @@
   <body>
     <header class="container">
       <div class="game flex-column justify-center">
+        <div class="hud">
+          <div class="hud-item question-counter">
+            <p class="hud-prefix">Question</p>
+            <h1 class="hud-main-text">1/3</h1>
+          </div>
+          <div class="hud-item score">
+            <p class="hud-prefix">Score</p>
+            <h1 class="hud-main-text">0</h1>
+          </div>
+        </div>
         <h2 class="question">What is the answer to this question?</h2>
         <div class="choice-container">
           <p class="choice-prefix">A</p>
