--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
     <header class="container">
       <div class="game flex-column justify-center">
         <div class="hud">
-          <div class="hud-item question-counter">
+          <div class="hud-item question-count">
             <p class="hud-prefix">Question</p>
             <h1 class="hud-main-text">1/3</h1>
           </div>
