question count js added in html

--- a/game.html
+++ b/game.html
@@ -11,13 +11,13 @@
     <header class="container">
       <div class="game flex-column justify-center">
         <div class="hud">
-          <div class="hud-item question-count">
+          <div class="hud-item">
             <p class="hud-prefix">Question</p>
-            <h1 class="hud-main-text">1/3</h1>
+            <h1 class="hud-main-text question-count">1/3</h1>
           </div>
-          <div class="hud-item score">
+          <div class="hud-item">
             <p class="hud-prefix">Score</p>
-            <h1 class="hud-main-text">0</h1>
+            <h1 class="hud-main-text score-count">0</h1>
           </div>
         </div>
         <h2 class="question">What is the answer to this question?</h2>
