--- a/game.html
+++ b/game.html
@@ -12,8 +12,10 @@
       <div class="game flex-column justify-center">
         <div class="hud">
           <div class="hud-item">
-            <p class="hud-prefix">Question</p>
-            <h1 class="hud-main-text question-count">1/3</h1>
+            <p class="hud-prefix question-count"></p>
+            <div class="progress-bar">
+              <div class="progress-bar-fill"></div>
+            </div>
           </div>
           <div class="hud-item">
             <p class="hud-prefix">Score</p>
