--- a/end.html
+++ b/end.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quiz daily - Score</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="container">
       <div class="end flex-center flex-column">
-        <h2>Congratulation! 🎉</h2>
+        <h2>Congratulation!</h2>
+        <p style="font-size: 2rem">You score</p>
         <h1 class="score"></h1>
         <form class="save-score-form">
           <input
