high score page markup added

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <header>
-      <h1>High Scores</h1>
+      <section class="container">
+        <div class="end flex-center flex-column">
+          <h1>High Scores</h1>
+        </div>
+      </section>
     </header>
   </body>
 </html>
