--- a/highscores.html
+++ b/highscores.html
@@ -14,6 +14,7 @@
         <p class="no-score-msg">Sorry, there is no high score.</p>
         <ol class="score-list"></ol>
         <a href="/game.html" class="btn">Play games</a>
+        <a href="/" class="btn">Home</a>
       </div>
     </section>
 
