--- a/end.html
+++ b/end.html
@@ -27,7 +27,7 @@
           </button>
         </form>
         <a href="/game.html" class="btn">Play Again</a>
-        <a href="/highscores.html" class="btn">High scores</a>
+        <a href="/" class="btn">Home</a>
       </div>
     </section>
 
