game markup changes

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="container">
-      <div class="game flex-column justify-center">
+      <div class="game hidden flex-column justify-center">
         <div class="hud">
           <div class="hud-item">
             <p class="hud-prefix question-count"></p>
