loader chnages and added in game markup

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header class="container">
+      <div class="loader"></div>
       <div class="game hidden flex-column justify-center">
         <div class="hud">
           <div class="hud-item">
